--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
 * export-ignore
 
-bin/phantom -export-ignore
-composer.json -export-ignore
-README.md -export-ignore
+!bin/phantom
+!composer.json
+!README.md
